<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gzenflow</name>
  <version>0.0.0</version>
  <description>Dynamic GStreamer and Zenoh stream control in ROS 2</description>
  <maintainer email="Schlichting25@gmail.com">thomas</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>gzenflow_interfaces</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-gst</exec_depend>  <!-- falls nötig -->
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>pyyaml</exec_depend>
  <exec_depend>python3-zenoh</exec_depend>
  <exec_depend>python3-gi</exec_depend>
  <exec_depend>gir1.2-gstreamer-1.0</exec_depend>
  <exec_depend>gir1.2-gst-plugins-base-1.0</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
